[gd_scene load_steps=32 format=2]

[ext_resource path="res://characters/player/star_breaker/weapon/laser_drone.gd" type="Script" id=1]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_bit03.png" type="Texture" id=2]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_laser1.png" type="Texture" id=3]
[ext_resource path="res://utils/Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_laser2.png" type="Texture" id=5]
[ext_resource path="res://characters/player/star_breaker/sfx/laser.ogg" type="AudioStream" id=6]
[ext_resource path="res://characters/player/star_breaker/sfx/spawn.ogg" type="AudioStream" id=7]
[ext_resource path="res://characters/player/star_breaker/weapon/laser_end_particle.png" type="Texture" id=8]
[ext_resource path="res://characters/player/star_breaker/weapon/laser_particle_tex.PNG" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 40.8253

[sub_resource type="Animation" id=2]

resource_name = "SETUP"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "die"
length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 3.38532, 4.01915, 3.38532 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 0.6 ), Vector2( 0, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "spawn"
length = 0.4
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 0.393401, 1, 4.01915, 4.01915, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 1, 1 ), Vector2( 2, 0.1 ), Vector2( 1.5, 0.6 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpawnAudio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserAudio:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Line2D:width")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 30.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LaserStart2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LaserStart:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Line2D:texture")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 3 ) ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("LaserTick")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start"
} ]
}
tracks/9/type = "method"
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_LaserTick_timeout"
} ]
}

[sub_resource type="Gradient" id=5]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]

flags = 4
gradient = SubResource( 5 )
width = 2048

[sub_resource type="Curve" id=7]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0.317383 ), 0.0, 2.42039, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]

flags = 4
width = 2048
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 45.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.2
scale_random = 0.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Gravity", "Scale", "Trail" ]

[sub_resource type="StreamTexture" id=10]

flags = 4
load_path = "res://.import/sb_impct00.png-373a0c740b5dcb4b796a58d9745318a5.stex"

[sub_resource type="Gradient" id=11]

offsets = PoolRealArray( 0, 0.0887574, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 0, 0.867188, 0.911243, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]

flags = 4
gradient = SubResource( 11 )
width = 2048

[sub_resource type="Curve" id=13]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.00292794, 0.381836 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]

flags = 4
width = 2048
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 45.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.3
scale_random = 0.2
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Gravity", "Scale", "Trail" ]

[sub_resource type="StreamTexture" id=16]

flags = 4
load_path = "res://.import/sb_impct01.png-a2ce1736bd82968d45b6313a2e56cdf3.stex"

[sub_resource type="ParticlesMaterial" id=17]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 45.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.5
scale_random = 0.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Gravity", "Scale", "Trail" ]

[sub_resource type="ParticlesMaterial" id=18]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 45.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.2
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Gravity", "Scale", "Trail" ]

[sub_resource type="StreamTexture" id=19]

flags = 4
load_path = "res://.import/sb_impct01.png-a2ce1736bd82968d45b6313a2e56cdf3.stex"

[sub_resource type="Gradient" id=20]

offsets = PoolRealArray( 0, 0.035503, 0.0414201, 0.365957, 0.446809, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.378906, 0.378906, 1, 0.667969, 0, 0.375732, 0 )

[sub_resource type="GradientTexture" id=21]

flags = 4
gradient = SubResource( 20 )
width = 2048

[sub_resource type="ParticlesMaterial" id=22]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 15.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity = 200.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 90.0
angle_random = 1.0
scale = 0.1
scale_random = 0.2
color_ramp = SubResource( 21 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Color", "Emission Shape", "Flags", "Gravity", "Initial Velocity", "Linear Accel", "Scale", "Spread", "Trail" ]

[node name="LaserDrone" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Pivot" type="Position2D" parent="." index="1"]

editor/display_folded = true

[node name="Body" type="Sprite" parent="Pivot" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="StatusIcon" type="Sprite" parent="Pivot" index="1"]

[node name="RayCast2D" type="RayCast2D" parent="." index="2"]

position = Vector2( 35, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 2000, 0 )
collision_mask = 8
_sections_unfolded = [ "Material", "Transform", "Z Index" ]

[node name="Line2D" type="Line2D" parent="." index="3"]

position = Vector2( 0.316478, 0 )
scale = Vector2( 0.968352, 1 )
points = PoolVector2Array( 40, 0, 2000, 0 )
width = 30.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 3 )
texture_mode = 1
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Fill", "Material" ]

[node name="LaserTick" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = false

[node name="Timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.2
one_shot = true
autostart = false

[node name="Health" parent="." index="6" instance=ExtResource( 4 )]

max_health = 250

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/SETUP = SubResource( 2 )
anims/die = SubResource( 3 )
anims/spawn = SubResource( 4 )
blend_times = [  ]

[node name="LaserAudio" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="SpawnAudio" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="LaserStart2" type="Particles2D" parent="." index="10"]

position = Vector2( 46.4314, 1.55765 )
emitting = true
amount = 4
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 9 )
texture = SubResource( 10 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="LaserStart" type="Particles2D" parent="." index="11"]

position = Vector2( 45.6962, 0.82251 )
emitting = true
amount = 4
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 15 )
texture = SubResource( 16 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time" ]

[node name="LaserEnd" type="Particles2D" parent="." index="12"]

position = Vector2( 1964.96, -1.49858 )
emitting = true
amount = 3
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 17 )
texture = ExtResource( 8 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="LaserEnd2" type="Particles2D" parent="." index="13"]

position = Vector2( 1964.22, -2.23372 )
emitting = true
amount = 3
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 18 )
texture = SubResource( 19 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time" ]

[node name="HitParticles" type="Particles2D" parent="." index="14"]

position = Vector2( 1988.24, 2.50948 )
rotation = -3.14159
emitting = true
amount = 30
lifetime = 0.3
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 22 )
texture = ExtResource( 9 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]


